--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,64 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Contact Nesibe Nur Pekçakar - Computer Engineer and AI Developer" />
-    <meta name="author" content="Nesibe Nur Pekçakar" />
-    <title>Contact | Nesibe Nur Pekçakar</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  </head>
-  <body class="d-flex flex-column h-100">
-    <main class="flex-shrink-0">
-      <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <div class="container px-5">
-          <a class="navbar-brand fw-bolder text-primary" href="index.html">
-            <i class="bi bi-cpu me-2 text-secondary"></i> Nesibe Nur Pekçakar
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-              <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-              <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
-      <!-- Contact Section -->
-      <section class="py-5">
-        <div class="container px-5">
-          <div class="text-center mb-5">
-            <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Get in Touch</span></h1>
-            <p class="text-muted mt-3">Let’s connect — I’m open to collaborations, freelance work, and full-time opportunities.</p>
-          </div>
-
-          <div class="row gx-5 justify-content-center">
-            <div class="col-lg-8 col-xl-6">
-              <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5 text-center">
-                  <h3 class="fw-bolder mb-4">Reach Me</h3>
-
-                  <!-- Contact Info -->
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content />
+        <meta name="author" content />
+        <title>Nesibe Nur Pekçakar-Contact Me</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Custom Google font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body class="d-flex flex-column">
+        <main class="flex-shrink-0">
+            <!-- Navigation-->
+            <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+                <div class="container px-5">
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar</span></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <!-- Page content-->
+            <section class="py-5">
+                <div class="container px-5">
+                    <!-- Contact form-->
+                    <div class="bg-light rounded-4 py-5 px-4 px-md-5">
+                        <div class="text-center mb-5">
+                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
+                            <h1 class="fw-bolder">Get in touch</h1>
+                            <p class="lead fw-normal text-muted mb-0">Let's work together!</p>
+                        </div>
+                        <div class="row gx-5 justify-content-center">
+                            <div class="col-lg-8 col-xl-6">
+                                <!-- * * * * * * * * * * * * * * *-->
+                                <!-- * * SB Forms Contact Form * *-->
+                                <!-- * * * * * * * * * * * * * * *-->
+                                <!-- This form is pre-integrated with SB Forms.-->
+                                <!-- To make this form functional, sign up at-->
+                                <!-- https://startbootstrap.com/solution/contact-forms-->
+                                <!-- to get an API token!-->
+                                  <!-- Contact Info -->
                   <div class="d-flex align-items-center justify-content-center mb-4">
                     <i class="bi bi-envelope fs-3 text-primary me-3"></i>
                     <a href="mailto:nesibepekcakar@example.com" class="text-decoration-none fw-semibold text-dark">
-                      nesibepekcakar@example.com
+                      nesibe.pekcakar@gmail.com
                     </a>
                   </div>
 
@@ -68,51 +76,86 @@
                     </a>
                   </div>
 
-                  <hr class="my-4" />
+                                <form id="contactForm"   action="https://formspree.io/f/mkgpleob" method="POST">
+  <!-- Name input -->
+  <div class="form-floating mb-3">
+    <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
+    <label for="name">Full name</label>
+    <div class="invalid-feedback">A name is required.</div>
+  </div>
 
-                  <!-- Contact Form -->
-                  <h4 class="fw-bold mb-3">Send a Message</h4>
-                  <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-                    <div class="form-floating mb-3">
-                      <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
-                      <label for="name">Full Name</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                      <input class="form-control" id="email" name="_replyto" type="email" placeholder="name@example.com" required />
-                      <label for="email">Email Address</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                      <textarea class="form-control" id="message" name="message" placeholder="Enter your message here..." style="height: 8rem" required></textarea>
-                      <label for="message">Message</label>
-                    </div>
-                    <div class="d-grid">
-                      <button class="btn btn-primary btn-lg" type="submit">Send Message</button>
-                    </div>
-                  </form>
+  <!-- Email address input -->
+  <div class="form-floating mb-3">
+    <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" required />
+    <label for="email">Email address</label>
+    <div class="invalid-feedback">Valid email is required.</div>
+  </div>
 
-                  <p class="text-muted mt-4 mb-0">Based in Türkiye · Open to remote & hybrid roles</p>
+  <!-- Phone number input -->
+  <div class="form-floating mb-3">
+    <input class="form-control" id="phone" name="phone" type="tel" placeholder="(123) 456-7890" />
+    <label for="phone">Phone number</label>
+  </div>
+
+  <!-- Message input -->
+  <div class="form-floating mb-3">
+    <textarea class="form-control" id="message" name="message" placeholder="Enter your message here..." style="height: 10rem" required></textarea>
+    <label for="message">Message</label>
+    <div class="invalid-feedback">A message is required.</div>
+  </div>
+
+  <!-- Submit success message -->
+  <div class="d-none" id="submitSuccessMessage">
+    <div class="text-center mb-3">
+      <div class="fw-bolder">Message sent successfully!</div>
+      Thank you for reaching out — I’ll get back to you soon.
+    </div>
+  </div>
+
+  <!-- Submit error message -->
+  <div class="d-none" id="submitErrorMessage">
+    <div class="text-center text-danger mb-3">Error sending message! Please try again later.</div>
+  </div>
+
+  <!-- Submit Button -->
+  <div class="d-grid">
+    <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Send Message</button>
+  </div>
+</form>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
+            </section>
+        </main>
+        <!-- Footer-->
+        <footer class="bg-white py-4 mt-auto">
+            <div class="container px-5">
+                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; 2025 Nesibe Nur Pekçakar</div></div>
+                    <div class="fs-5">
+      <a href="https://github.com/nesibepekcakar" class="text-secondary mx-2"><i class="bi bi-github"></i></a>
+      <a href="https://linkedin.com/in/nesibepekcakar" class="text-secondary mx-2"><i class="bi bi-linkedin"></i></a>
+      <a href="mailto:nesibe.pekcakar@gmail.com" class="text-secondary mx-2"><i class="bi bi-envelope"></i></a>
+                    <div class="col-auto">
+                        <a class="small" href="#!">Privacy</a>
+                        <span class="mx-1">&middot;</span>
+                        <a class="small" href="#!">Terms</a>
+                        <span class="mx-1">&middot;</span>
+                        <a class="small" href="#!">Contact</a>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-white py-4 mt-auto">
-      <div class="container px-5 text-center">
-        <div class="small text-muted mb-2">© 2025 Nesibe Nur Pekçakar</div>
-        <div class="fs-5">
-          <a href="https://github.com/nesibepekcakar" class="text-secondary mx-2"><i class="bi bi-github"></i></a>
-          <a href="https://linkedin.com/in/nesibepekcakar" class="text-secondary mx-2"><i class="bi bi-linkedin"></i></a>
-          <a href="mailto:nesibepekcakar@example.com" class="text-secondary mx-2"><i class="bi bi-envelope"></i></a>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Bootstrap core JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <!-- * *                               SB Forms JS                               * *-->
+        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </body>
 </html>
