--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
                         <!-- Experience Section-->
                         <section>
                             <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h2 class="text-primary fw-bolder mb-0">Experience</h2>
+                                <h2 class="text-gradient d-inline">Experience</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
                                 <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf">
@@ -93,7 +93,7 @@
                         </section>
                         <!-- Education Section-->
                         <section>
-                            <h2 class="text-secondary fw-bolder mb-4">Education</h2>
+                            <h2 class="text-gradient d-inline">Education</h2>
                             <!-- Education Card 1 -->
 <div class="card shadow border-0 rounded-4 mb-5">
     <div class="card-body p-5">
