--- a/resume.html
+++ b/resume.html
@@ -43,8 +43,16 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                            <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h2 class="text-gradient d-inline">Experience</h2>
+                            <div class="mb-0"> 
+    <div class="d-flex align-items-center mb-4">
+        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+            <i class="bi bi-briefcase"></i> 
+        </div>
+        <h3 class="fw-bolder mb-0">
+            <span class="text-gradient d-inline">Experience</span>
+        </h3>
+    </div>
+</div>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
                                 <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf">
@@ -93,7 +101,17 @@
                         </section>
                         <!-- Education Section-->
                         <section>
-                            <h2 class="text-gradient d-inline">Education</h2>
+                            <div class="mb-0"> 
+    <div class="d-flex align-items-center mb-4">
+        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+            <i class="bi bi-briefcase"></i> 
+        </div>
+        <h3 class="fw-bolder mb-0">
+            <span class="text-gradient d-inline">Experience</span>
+        </h3>
+    </div>
+</div>
+                            
                             <!-- Education Card 1 -->
 <div class="card shadow border-0 rounded-4 mb-5">
     <div class="card-body p-5">
