--- a/resume.html
+++ b/resume.html
@@ -43,23 +43,20 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                            <div class="mb-0"> 
-    <div class="d-flex align-items-center mb-4">
-        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-            <i class="bi bi-briefcase"></i> 
+                            <<div class="d-flex align-items-center justify-content-between mb-4">
+        <div class="d-flex align-items-center">
+            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+                <i class="bi bi-briefcase"></i> 
+            </div>
+            <h3 class="fw-bolder mb-0">
+                <span class="text-gradient d-inline">Experience</span>
+            </h3>
         </div>
-        <h3 class="fw-bolder mb-0">
-            <span class="text-gradient d-inline">Experience</span>
-        </h3>
+        <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf">
+            <div class="d-inline-block bi bi-download me-2"></div>
+            Download Resume
+        </a>
     </div>
-</div>
-                                <!-- Download resume button-->
-                                <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf">
-                                    <div class="d-inline-block bi bi-download me-2"></div>
-                                    Download Resume
-                                </a>
-                            </div>
                             <!-- Experience Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
@@ -101,16 +98,12 @@
                         </section>
                         <!-- Education Section-->
                         <section>
-                            <div class="mb-0"> 
-    <div class="d-flex align-items-center mb-4">
+<div class="d-flex align-items-center mb-5">
         <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-            <i class="bi bi-briefcase"></i> 
-        </div>
+            <i class="bi bi-mortarboard"></i> </div>
         <h3 class="fw-bolder mb-0">
-            <span class="text-gradient d-inline">Experience</span>
-        </h3>
+            <span class="text-gradient d-inline">Education</span> </h3>
     </div>
-</div>
                             
                             <!-- Education Card 1 -->
 <div class="card shadow border-0 rounded-4 mb-5">
