--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body class="d-flex flex-column h-100 bg-light">
         <main class="flex-shrink-0">
@@ -178,10 +179,7 @@
                             <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                             <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                             <a href="https://huggingface.co/nesibnnur" target="_blank" class="text-gradient">
-        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 1024 1024">
-            <path d="M512 0C229.41 0 0 229.41 0 512c0 282.59 229.41 512 512 512s512-229.41 512-512C1024 229.41 794.59 0 512 0zm0 921.6c-225.84 0-409.6-183.76-409.6-409.6S286.16 102.4 512 102.4s409.6 183.76 409.6 409.6-183.76 409.6-409.6 409.6z"/>
-            <path d="M512 307.2c-56.51 0-102.4 45.89-102.4 102.4s45.89 102.4 102.4 102.4 102.4-45.89 102.4-102.4-45.89-102.4-102.4-102.4zM512 563.2c-157.06 0-281.6 109.84-281.6 245.76h563.2c0-135.92-124.54-245.76-281.6-245.76z"/>
-        </svg>
+        <i class="fa-brands fa-hive"></i>
     </a>
                         </div>
                     </div>
