--- a/about.html
+++ b/about.html
@@ -56,33 +56,16 @@
 
 
     <!-- About Section -->
-    <section class="bg-light pt-4 pb-5">
+    <section class=" pt-4 pb-5">
     <div class="container px-4 px-md-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-xl-10">
 
                 <div class="row g-4 align-items-start">
 
-                    <!-- LEFT SIDE PROFILE CARD -->
-                    <div class="col-lg-4">
-                        <div class="card shadow-sm border-0 rounded-4 p-4 text-center">
-                            <img src="assets/profile.jpg" 
-                                 alt="Profile Photo"
-                                 class="img-fluid rounded-4 shadow-sm mb-3">
-
-                            <h4 class="fw-bold mb-1 text-gradient">Nesibe Nur Pekçakar</h4>
-                            <p class="text-muted small mb-3">Computer Engineer</p>
-
-                            <div class="d-flex justify-content-center gap-3 fs-4">
-                                <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient"><i class="bi bi-envelope"></i></a>
-                                <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-linkedin"></i></a>
-                                <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient"><i class="bi bi-github"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
+                    
                     <!-- RIGHT SIDE ABOUT TEXT CARD -->
-                    <div class="col-lg-8">
+                    <div class="bg-light col-lg-8">
                         <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5">
 
                             <p class="lead fw-light mb-4 fs-5 text-start">
